syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.huytpq.order_service.grpc";
option java_outer_classname = "UserProto";

service UserGrpcService {
  rpc GetUserById (GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  int64 userId = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}
